# GCP_ML_Demos

./: .gitignore  LICENSE.txt  README.md  azure-pipelines.yml  cloudbuild.yaml
bigquery/demo1/: create_taxi_trips_model_input.sql  create_taxi_trips_preproc.sql  data_exploration.sql  data_preprocessing.sql
bigquery/demo2/: demo2-data_exploration.sql  demo2-transformation_test.sql  demo2-transformation_train.sql  vw-black-friday-test.sql  vw-black-friday-train.sql
documents/: whitepaper_demo1.docx  whitepaper_demo2.docx
infrastructure/dev/: backend.tf  bigquery.tf  cloudbuild.tf  config.tf  demos.tf  project_iam.tf  provider.tf  services.tf  vpc.tf
python/demo1/: Dockerfile  README.md  create_test_jsonl.py  local_dev.py  local_main_dev.py  main.py  scratch.py  (+6 more)
python/demo2/: BigQuery-Connector.py  Dockerfile.dockerfile  Dockerfile.prediction  Dockerfile.training  Pipfile  README.md  dockerfile  main.py  ml_grid-search.py  ml_model1.py  plotting-function.py  pyproject.toml  requirements.txt  update_image.sh  update_images.sh
python/demo2/mlmodels/: model1.pkl
python/demo2/pipeline/: pipeline.py
python/demo2/pipeline/components/: __init__.py  create_pipeline.py  evaluate_model.py  get_metrics.py  import_model.py  load_data.py  split_data.py  train.py  train_eval_split.py  train_test_split.py  transform.py
python/demo2/prediction/: main.py  requirements.txt  sample_request.sh  test_instances.json
python/demo2/scripts/: BigQuery-Connector.py  ml_model1.py  ml_model2.py  ml_model3.py  ml_random-search.py  plotting-function.py
python/demo2/training/: main.py
(+67 files in other folders)
